--- a/Tycoon/appsettings.json
+++ b/Tycoon/appsettings.json
@@ -11,10 +11,10 @@
   },
   "AllowedHosts": "*",
   "Stripe": {
-    "Secretkey": "sk_test_crcXEoF4VZf2o0MibrozkCYm00lB9HnbLU",
-    "Publishablekey": "pk_test_kLhTsRSR7pbz90oLqYng8Dox00ZctThT44"
+    "Secretkey": "Use  key from stripe",
+    "Publishablekey": "Use  key from stripe"
   },
 
-  "SendGridKey": "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"
+  "SendGridKey": "Use API key from sendgrid"
 
 }
